<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/purple_700"
        android:padding="10dp"
        android:text="@string/settings"
        android:textColor="@color/cardview_light_background" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/spinner_hint" />

    <Spinner
        android:id="@+id/map_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/server_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/color_breakpoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/breakpoint_hint"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>